syntax = "proto3";

message HelloWorldRequest {
// a name to greet, default is "World"
string name = 1;
}

message HelloWorldResponse {
string greeting = 1;
}

service HelloWorldService {
rpc SayHello(stream HelloWorldRequest) returns (stream HelloWorldResponse);
        }